Funcionalid basica de todos los endpoint cubierta
