# src/main/java/com/garajeideas/coursemanagement/rest/CourseController.java
@@ -1,11 +1,16 @@
 package com.garajeideas.coursemanagement.rest;
 
 import com.garajeideas.coursemanagement.openapi.web.rest.CoursesApi;
-import com.garajeideas.coursemanagement.openapi.web.rest.dtos.*;
+import com.garajeideas.coursemanagement.openapi.web.rest.dtos.CourseRequest;
+import com.garajeideas.coursemanagement.openapi.web.rest.dtos.CourseResponse;
+import com.garajeideas.coursemanagement.openapi.web.rest.dtos.CourseStudentsResponse;
+import com.garajeideas.coursemanagement.openapi.web.rest.dtos.CoursesPageResponse;
 import com.garajeideas.coursemanagement.rest.validator.CourseRequestValidator;
 import com.garajeideas.coursemanagement.security.AuthoritiesConstants;
 import com.garajeideas.coursemanagement.service.CourseService;
+import com.garajeideas.coursemanagement.service.CourseStudentService;
 import com.garajeideas.coursemanagement.service.mapper.CourseMapper;
+import com.garajeideas.coursemanagement.service.mapper.CourseStudentMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
@@ -13,7 +18,6 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.WebDataBinder;
 import org.springframework.web.bind.annotation.InitBinder;
-
 
 import javax.validation.Valid;
 import java.time.OffsetDateTime;
@@ -27,6 +31,8 @@ public class CourseController implements CoursesApi {
 
     private final CourseMapper courseMapper;
     private final CourseService courseService;
+    private final CourseStudentService courseStudentService;
+    private final CourseStudentMapper courseStudentMapper;
 
     @InitBinder("courseRequest")
     protected void initBinder(WebDataBinder binder) {
@@ -47,11 +53,6 @@ public class CourseController implements CoursesApi {
     }
 
     @Override
-    public ResponseEntity<Void> enrollStudentInCourse(Long courseId, StudentsPageResponse studentsPageResponse) {
-        return null;
-    }
-
-    @Override
     public ResponseEntity<CourseResponse> getCourseById(Long id) {
         return ResponseEntity.ok(courseMapper.toResponse(courseService.getCourseById(id)));
     }
@@ -64,17 +65,26 @@ public class CourseController implements CoursesApi {
     }
 
     @Override
-    public ResponseEntity<List<StudentResponse>> getStudentsInCourse(Long courseId) {
-        return null;
+    public ResponseEntity<CourseResponse> updateCourse(Long id, @Valid CourseRequest courseRequest) {
+        return ResponseEntity.ok(courseMapper.toResponse(courseService.updateCourse(id, courseMapper.toDTO(courseRequest))));
+    }
+
+    @Override
+    public ResponseEntity<Void> enrollStudentInCourse(Long courseId, Long studentId) {
+        courseStudentService.enrollStudentInCourse(courseId, studentId);
+        return ResponseEntity.noContent().build();
+    }
+
+    @Override
+    public ResponseEntity<List<CourseStudentsResponse>> getStudentsInCourse(Long courseId) {
+        return ResponseEntity.ok(courseStudentMapper.toResponseList(courseStudentService.getStudentsByCourseId(courseId)));
     }
 
     @Override
     public ResponseEntity<Void> unenrollStudentFromCourse(Long courseId, Long studentId) {
-        return null;
+        courseStudentService.unenrollStudentFromCourse(courseId, studentId);
+        return ResponseEntity.noContent().build();
     }
 
-    @Override
-    public ResponseEntity<CourseResponse> updateCourse(Long id,@Valid CourseRequest courseRequest) {
-        return ResponseEntity.ok(courseMapper.toResponse(courseService.updateCourse(id, courseMapper.toDTO(courseRequest))));
-    }
+
 }
